<resources>
    <string name="app_name">Airlines</string>
    <string name="hello">Hello world</string>
    <string name="sign_up">Sign up</string>
    <string name="search_txt">Search</string>
    <string name="update_txt">Update</string>
    <string name="fname">First name</string>
    <string name="lname">Last name</string>
    <string name="nationality">Nationality</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="setting">Setting</string>
    <string name="book">Book Flight</string>
    <string name="check_in">Check In</string>
    <string name="add_flight">Add Flight</string>
    <string name="add_plane">Add Plane</string>
    <string name="custome_list">Customers List</string>
    <string name="flight_name">Flight</string>
    <string name="flight_dest">Destination</string>
    <string name="flight_root">Root</string>
    <string name="flightDuration">Duration</string>
    <string name="flightExpense">Expense</string>
    <string name="plane_no">Plane No</string>
    <string name="flight_Plane">Plane</string>
    <string name="No_of_seats">No of Seats</string>
    <string name="quality">Quality</string>

    <string-array name="country">
        <item>Addis Ababa</item>
        <item>Bahir Dar</item>
        <item>Gonder</item>
        <item>Axum</item>
        <item>Mekelle</item>
        <item>Gambella</item>
        <item>Lalibella</item>
        <item>Shire</item>
    </string-array>

    <string-array name="quality">
        <item>Top</item>
        <item>Standard</item>
        <item>Low</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update_button">Update</string>
    <string name="delete_button">Delete</string>
    <string name="find_button">Find</string>
    <string name="flight_no">Flight No</string>
    <string name="flight_plane">Plane</string>
    <string name="root_country">Root Country</string>
    <string name="add_filght_duration_time">Add filght duration time</string>
    <string name="add_flight_expense">Add flight expense</string>
    <string name="flight_expense">Flight Expense</string>
    <string name="destination">Destination</string>
    <string name="flight_duration">Flight Duration</string>
    <string name="add">add</string>
    <string name="Plane_no">Plane No</string>
</resources>
