<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/primary">
        <item
                android:id="@id/home_dest"
                android:icon="@drawable/ic_home"
                android:title="Home" />
        <item
                android:id="@id/addFlightFragment"
                android:icon="@drawable/ic_add_black"
                android:title="@string/add_flight" />

        <item
                android:id="@id/addPlaneFragment"
                android:icon="@drawable/ic_add_black"
                android:title="@string/add_plane" />

        <item
                android:id="@id/customerListFragment"
                android:icon="@drawable/ic_person_black_96dp"
                android:title="@string/custome_list" />
    </group>
    <item
            android:id="@+id/settings_dest"
            android:icon="@drawable/ic_settings"
            android:title="setting" />
</menu>
