<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.airlines.SignupFragment">


    <TextView
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
        app:fontFamily="sans-serif-condensed-light" android:textSize="24sp" android:textStyle="bold"/>


    <TextView
        android:text="@string/lname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/lname_txt"/>
    <TextView
        android:text="@string/fname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fname_txt"/>

    <androidx.constraintlayout.widget.Guideline
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/guideline2"
        app:layout_constraintGuide_percent="0.32"/>

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:autofillHints="@string/lname"
        android:id="@+id/lname_txt" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
        android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView2"/>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:autofillHints="@string/fname"
        android:id="@+id/fname_txt" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/lname_txt" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>

    <TextView
        android:text="@string/nationality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/fname_txt"
        />

    <TextView
        android:text="@string/date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.631" app:layout_constraintBaseline_toBaselineOf="@+id/dob_txt"/>
    <TextView
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline2"
        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@id/nationality_txt"
        app:layout_constraintBottom_toTopOf="@id/dob_txt"/>

    <Spinner
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/nationality_txt"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toBottomOf="@+id/fname_txt"/>



    <RadioGroup
        android:id="@+id/gender_txt"
        android:layout_width="0dp"
        android:contentDescription="Layouts"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/nationality_txt"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        android:layout_marginLeft="8dp">
        <RadioButton
            android:id="@+id/radioOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textSize="15dp"/>
        <RadioButton
            android:id="@+id/radioTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fmale" android:textSize="15dp"/>
    </RadioGroup>
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:autofillHints="@string/date_of_birth"
        android:id="@+id/dob_txt" android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/gender_txt" android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/sign_up"
        android:id="@+id/signup_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2" android:layout_marginLeft="8dp"
        app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
