<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="viewmodel" type="com.example.airlines.data.Flight"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_green"
            android:layout_marginTop="5dp">


        <TextView
                android:text="@string/flight_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/number" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintBaseline_toBaselineOf="@+id/flight_no"/>
        <TextView
                android:text="@string/flight_root"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                app:layout_constraintTop_toBottomOf="@+id/number"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintBaseline_toBaselineOf="@+id/flight_root_id"/>
        <TextView
                android:text="@string/flight_dest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView15"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintBaseline_toBaselineOf="@+id/flight_dest_id"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline" app:layout_constraintGuide_percent="0.24"/>
        <TextView
                android:text="@string/flight_Plane"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView16"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5"
                app:layout_constraintBaseline_toBaselineOf="@+id/flight_pane_name_id"/>
        <TextView
                android:text="@string/flightDuration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView17"
                app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toStartOf="@+id/guideline5"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/flight_duration_id"/>
        <TextView
                android:text="@string/flightExpense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView18"
                app:layout_constraintStart_toStartOf="@+id/guideline3"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline5" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintBaseline_toBaselineOf="@+id/flight_expense_id"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline3" app:layout_constraintGuide_percent="0.62"/>
        <TextView
                android:layout_width="0dp"
                android:text="@{Integer.toString(viewmodel.flightNo)}"
                android:layout_height="wrap_content"
                android:id="@+id/flight_no" app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:layout_width="0dp"
                android:text="@{viewmodel.root}"
                android:layout_height="wrap_content"
                android:id="@+id/flight_root_id" app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.428"
                app:layout_constraintTop_toBottomOf="@+id/flight_no" android:layout_marginTop="16dp"/>
        <TextView
                android:layout_width="0dp"
                android:text="@{viewmodel.dest}"
                android:layout_height="wrap_content"
                android:id="@+id/flight_dest_id" app:layout_constraintStart_toStartOf="@+id/guideline"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline3" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintTop_toBottomOf="@+id/flight_root_id" android:layout_marginTop="16dp"/>
        <androidx.constraintlayout.widget.Guideline
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/guideline5" app:layout_constraintGuide_percent="0.82"/>
        <TextView
                android:layout_width="0dp"
                android:text="@{viewmodel.flightDuration}"
                android:layout_height="wrap_content"
                android:id="@+id/flight_duration_id"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@{Integer.toString(viewmodel.flightExpense)}"
                android:id="@+id/flight_expense_id" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/flight_duration_id" android:layout_marginTop="16dp"/>
        <TextView
                android:layout_width="0dp"
                android:text="@{viewmodel.plane.name}"
                android:layout_height="wrap_content"
                android:id="@+id/flight_pane_name_id" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="@+id/guideline5"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/flight_expense_id"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>

